// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButton matches loading snapshot 1`] = `
<ActionButton
  loading={true}
>
  <button
    className="p-button--neutral is-processing"
  >
    <i
      className="p-icon--spinner u-animation--spin"
    />
  </button>
</ActionButton>
`;

exports[`ActionButton matches success snapshot 1`] = `
<ActionButton
  loading={false}
  success={true}
>
  <button
    className="p-button--neutral is-processing"
  >
    <i
      className="p-icon--success"
    />
  </button>
</ActionButton>
`;
